update partition tutorial tex

--- a/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.tex
+++ b/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial.tex
@@ -9,9 +9,13 @@
 
 \thispagestyle{plain}
 \begin{center}
+\renewcommand{\headrulewidth}{0.5pt}
 
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
-\textbf{\it{\Large Data Partitioning}}\\\vspace{2mm}
+\textbf{\it{\Large Partitioned data analyses}}\\\vspace{2mm}
+\vspace{1cm}
+{\Large (under construction)}
+\vspace{1cm}
 \end{center}
 
 \def \ResourcePath {./}
@@ -20,19 +24,6 @@
 \input{RB_Partition_Tutorial_content_1}
 \input{RB_Partition_Tutorial_content_2}
 \input{RB_Partition_Tutorial_content_3}
-
-Version dated: \today
-
-
-
-\vspace{5cm}
-Questions about this tutorial can be directed to: \\\vspace{-10mm}
-\begin{itemize}
-\item Tracy Heath (email: \href{mailto:tracyh@berkeley.edu}{tracyh@berkeley.edu}) \\\vspace{-8mm}
-\item Sebastian H\"{o}hna (email: \href{mailto:sebastian.hoehna@gmail.com}{sebastian.hoehna@gmail.com}) \\\vspace{-8mm}
-\item Michael Landis (email: \href{mailto:mlandis@berkeley.edu}{mlandis@berkeley.edu}) \\\vspace{-8mm} 
-\item Brian R. Moore (email: \href{mailto:brianmoore@ucdavis.edu}{brianmoore@ucdavis.edu}) \\\vspace{-8mm}
-\end{itemize}
 
 
 \bibliographystyle{sysbio}
