--- a/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial_content_1.tex
+++ b/tutorial_TeX/RB_Partition_Tutorial/RB_Partition_Tutorial_content_1.tex
@@ -1,41 +1,20 @@
- \section{Concatenated, Non-partitioned}\label{secUnif} 
+\section{Concatenated, Non-partitioned}\label{secUnif} 
 
-The first section of this exercise involves 
-(1) setting up a uniform GTR+$\Gamma$ model for an alignment comprising two genes, 
-(2) approximating the posterior probability of the tree topology and branch lengths (and all other parameters) using MCMC,  
-(3) summarizing the MCMC output by computing the maximum a posteriori tree.
+Our first exercise is to construct a multi-gene analysis where all genes evolve under the same process and parameters.
 
-All of the files for this analysis are provided for you and you can run these without significant effort using the \cl{source()} function in the \RevBayes~console:
+To begin, load in the sequences using the \cl{readDiscreteCharacterData()} function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-source("RevBayes_scripts/model_PS0.Rev")
-\end{lstlisting}
-\end{snugshade*}}
-
-If everything loaded properly, then you should see the program begin running the Markov chain Monte Carlo analysis needed for estimating the posterior distribution. If you continue to let this run, then you will see it output the states of the Markov chain once the MCMC analysis begins.
-
-\bigskip
-\subsection{Full Model Specification}
-
-\subsubsection{Load Data}
-
-First load in the sequences using the \cl{readDiscreteCharacterData()} function. 
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-data_16s = readDiscreteCharacterData("data/primates_16s_rrna.nex")
 data_cox2 = readDiscreteCharacterData("data/primates_cox2.nex")
 data_cytb = readDiscreteCharacterData("data/primates_cytb.nex")
 \end{lstlisting}
 \end{snugshade*}}
 
-Executing these lines initializes each data matrix as their respective \Rev~variables. 
-Since the first step in this exercise is to assume a single model for both genes, we need to combine the three datasets.
-Concatenate the three data matrices using the \cl{concatenate()} function.
-This returns a single data matrix with all three genes.
+Since the first step in this exercise is to assume a single model across genes, we need to combine the two datasets using {\tt concatenate()}
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-data = concatenate( data_16s, data_cox2, data_cytb )
+data = concatenate( data_cox2, data_cytb )
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -45,26 +24,26 @@ Typing \cl{data} reports the dimensions of the concatenated matrix, this provide
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 
-   DNA character matrix with 23 taxa and 2782 characters
+   DNA character matrix with 23 taxa and 1852 characters
    =====================================================
-   Origination:                   primates_16s_rrna.nex
+   Origination:                   primates_cox2.nex
    Number of taxa:                23
    Number of included taxa:       23
-   Number of characters:          2782
-   Number of included characters: 2782
+   Number of characters:          1852
+   Number of included characters: 1852
    Datatype:                      DNA
 
 \end{lstlisting}
 \end{snugshade*}}
 
-
-For later use, we will store the number of species (\cl{n\_species}), the tip labels (\cl{names}), and the number of internal branches (\cl{n\_branches}).
+For later use, we will store the taxon labels (\cl{names}), the number of species (\cl{n\_species}), the number of internal branches (\cl{n\_branches}), and the number of sites (\cl{n\_sites}).
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 names <- data.names()
 n_species <- data.ntaxa()
-n_branches <- 2 * n_species - 3 
+n_branches <- 2 * n_species - 3
+n_sites <- data.nchar()
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -72,139 +51,46 @@ Additionally, we will create some move and monitor index variables to create our
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mvi = 1
-mni = 1
+mvi <- 1
+mni <- 1
 \end{lstlisting}
 \end{snugshade*}}
 
 Now we can proceed with building our GTR$+\Gamma$ model.
+First, we will define and specify a prior on the exchangeability rates of the GTR model
 
-\textbf{\textit{The GTR Parameters}}
-
-The first step in this exercise involves estimating the marginal likelihood of our model assuming an unpartitioned alignment. 
-This corresponds to the assumption that the process that gave rise to our data was homogeneous across all sites. 
-Specifically, we will assume that both genes evolved under the same GTR$+\Gamma$ model (Fig.~\ref{pipeline}). 
-
-First, we will define and specify a prior on the exchangeability rates of the GTR model. We will use a flat Dirichlet prior distribution on these six rates. To do this, we must begin by defining a constant node that specifies the vector of concentration values of the Dirichlet prior using the \cl{v()} function:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 er_prior <- v(1,1,1,1,1,1) 
+er ~ dnDirichlet( er_prior )
 \end{lstlisting}
 \end{snugshade*}}
 
+and assign its move
 
-The constant node \cl{er\_prior} corresponds to the node labeled $e$ in the graphical model depicted in Figure \ref{gtrgmfig}. 
-The vector function, \cl{v()}, creates a vector of six values. 
-Display the current value of \cl{er\_prior} by simply typing the variable name:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-er_prior
-|*       [ 1, 1, 1, 1, 1, 1 ]
+moves[mvi++] = mvSimplex(er, alpha=10, offset=2, tune=true, weight=15)
+moves[mvi++] = mvSimplexElementScale(er, alpha=10, tune=true, weight=3) 
 \end{lstlisting}
 \end{snugshade*}}
-This node defines the parameters of the Dirichlet prior distribution on the exchangeability rates. Thus, we can create a stochastic node for the exchangeability rates using the \cl{dnDirichlet()} function, which takes a vector of values as an argument and the \cl{\rbdn} operator. Together, these create a stochastic node named \cl{er} ($\theta$ in Figure \ref{gtrgmfig}): 
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-er ~ dnDirichlet(er_prior)
-\end{lstlisting}
-\end{snugshade*}}
-
-
-The Dirichlet distribution assigns probability densities to grouped parameters: {\it e.g.}, those that measure proportions and must sum to 1. 
-Above, we specified a 6-parameter Dirichlet prior on the relative rates of the GTR model, where the placement of each value specified represents one of the 6 relative rates: (1) $A\leftrightarrows C$, (2) $A\leftrightarrows G$, (3) $A\leftrightarrows T$, (4) $C\leftrightarrows G$, (5) $C\leftrightarrows T$, (6) $G\leftrightarrows T$. 
-The input parameters of a Dirichlet distribution are called shape parameters or concentration parameters and a value is specified for each of the 6 GTR rates. 
-The expectation and variance for each variable are related to the sum of the shape parameters.
-The prior above is a `flat' or symmetric Dirichlet since all of the shape parameters are equal (1,1,1,1,1,1), thus we are specifying a model that allows for equal rates of change between nucleotides, such that the expected rate for each is equal to $\frac{1}{6}$ \citep{zwickl04}.
-Figure \ref{dirichletFig}a shows the probability density of each rate under this model.
-If we parameterized the Dirichlet distribution such that all of the parameters were equal to 100, this would also specify a prior with an expectation of equal exchangeability rates (Figure \ref{dirichletFig}b). 
-However, by increasing the shape parameters of the Dirichlet distribution, \cl{er\_prior <- v(100,100,100,100,100,100)}, would heavily restrict the MCMC from sampling sets of GTR rates in which the values were not equal or very nearly equal ({\it i.e.}, this is a very {\em informative} prior). 
-We can consider a different Dirichlet parameterization if we had strong prior belief that transitions and transversions occurred at different rates.
-In this case, we could specify a more informative prior density: \cl{er\_prior <- v(4,8,4,4,8,4)}. 
-Under this model, the expected rate for transversions would be $\frac{4}{32}$ and the expected rate for transitions would equal $\frac{8}{32}$, and there would be greater prior probability on sets of GTR rates that matched this configuration (Figure \ref{dirichletFig}c). 
-An alternative informative prior would be one where we assumed that each of the 6 GTR rates had a different value conforming to a Dirichlet(2,4,6,8,10,12). 
-This would lead to a different prior probability density for each rate parameter (Figure \ref{dirichletFig}d).
-Without strong prior knowledge about the pattern of relative rates, however, we can better capture our statistical uncertainty with a vague prior on the GTR rates. 
-Notably, all patterns of relative rates have the same probability density under \cl{er\_prior <- v(1,1,1,1,1,1)}.
-\begin{figure}[h!]
-\centering
-\fbox{\includegraphics[width=5in,angle=-90]{\ResourcePath figures/dirichlet_rates.eps}}
-\caption{\small Four different examples of Dirichlet priors on exchangeability rates.}
-\label{dirichletFig}
-\end{figure}
-
-For each stochastic node in our model, we must also specify a proposal mechanism if we wish to sample that value. 
-The Dirichlet prior on our parameter \cl{er} creates a \href{http://en.wikipedia.org/wiki/Simplex}{\textit{simplex}} of values that sum to 1. 
-In RevBayes, there are many different proposal mechanisms -- called \textit{moves} -- and each move operates on a specific data type (called RevType). 
-Check the RevType of the variable \cl{er} using the \cl{structure()} function:
-{\tt \small \begin{snugshade*}
-\begin{lstlisting}
-structure(er)
-
-|*  _variable     = er <0x7ffed8449370>
-|*  _RevType      = Simplex
-|*  _RevTypeSpec  = [ Simplex, RealPos[], ModelContainer, Container, RevObject ]
-|*  _value        = [ 0.00308506, 0.491487, 0.186317, 0.0275106, 0.1982...
-|*  _size         = 6
-|*  _dagNode      = er <0x7ffed8448bb0>
-|*  _dagType      = Stochastic DAG node
-|*  _refCount     = 1
-|*  _distribution = <0x7ffed8448cf0>
-|*  _touched      = TRUE
-|*  _clamped      = FALSE
-|*  _lnProb       = -inf
-|*  _storedLnProb = 6.95325e-310
-|*  _parents      = [ er_prior <0x7ffed8449250> ]
-|*  _children     = [  ]
-\end{lstlisting}
-\end{snugshade*}}
-
-The \cl{structure()} function -- which has an accepted abbreviation of \cl{str()} -- is verbose and provides a lot of information that may at first appear confusing. 
-In particular, this function provides the \href{http://en.wikipedia.org/wiki/Memory_address}{\textit{memory addresses}} of the node, its parent node(s), and the distribution. 
-These strings indicate the location of the variable in computer memory. 
-Thus, if you view the structure of your \cl{er} node, these sequences of numbers will be different from the ones in the box above. 
-Much of this information is helpful primarily for troubleshooting and debugging purposes, however, the components that you may want to look at are: \cl{RevType}, \cl{value}, \cl{dagType}, \cl{clamped}, \cl{lnProb}, and the names of the \cl{variable}, \cl{parents}, and \cl{children}.
-
-We must create a vector containing all of the moves for each of our stochastic nodes. 
-This vector will be passed in to the function constructing our MCMC or power posterior runs.
-All moves in the Rev language are called \cl{mv*}, where \cl{*} is a wild card for the move name. 
-Initialize the first element of our vector of moves by setting the proposal on the exchangeability rates:
-
-{\tt\small \begin{snugshade*}
-\begin{lstlisting}
-moves[++mi] = mvSimplexElementScale(er, alpha=10, tune=true, weight=3) 
-\end{lstlisting}
-\end{snugshade*}}
-
-
-The various proposal mechanisms available in \RevBayes~each require specific input arguments. 
-The \cl{mvSimplexElementScale} move can only operate on a simplex and the first argument is the stochastic node that you wish to update. 
-The variable node is followed by three more arguments: (1) \cl{alpha} is the \textit{tuning parameter} of the move and controls the size of the proposal; (2) by setting \cl{tune=true} we are telling the program to adjust the tuning parameter if the acceptance rate of the proposal is too high or too low -- the target for this move is an acceptance rate of 0.44; (3) the \cl{weight} specifies how frequently this move is performed at each step in the Markov chain. 
-
-It is important to note that by default, a single generation in RevBayes updates all stochastic nodes in proportion to the \cl{weight} argument specified. 
-This approach is different from many phylogenetic MCMC programs -- such as MrBayes -- which only perform one move per MCMC iteration. 
-Instead, for each generation in RevBayes, a \textit{move list} is carried out in random order. 
-By setting \cl{weight=3} above, we are ensuring that the new values are proposed for \cl{er} three times per iteration. 
-Thus, if you set \cl{weight=0.5} the move will only have a 50\% chance of occurring at each generation. 
-Essentially, the \cl{weight} argument for each move indicates the number of times it will be performed.
-If you keep all of the move weights set to the values specified in this tutorial for the uniform model, you will have set 20 different moves and the MCMC simulator will execute 38 moves per generation.
-This is a practical approach for MCMC analysis using complex models and is used by several other programs (\href{http://megasun.bch.umontreal.ca/People/lartillot/www/index.htm}{Phylobayes}, \href{http://hydrodictyon.eeb.uconn.edu/projects/phycas/index.php/Phycas_Home}{Phycas}, \href{http://www.bali-phy.org/}{Bali-Phy}).
-However, because RevBayes is updating many parameters each generation, it is not straightforward to compare run-times with a program like MrBayes that only performs approximately one update per generation. 
-Furthermore, using this approach to MCMC simulation, you can sufficiently sample the chain in fewer generations while sampling more frequently than you would in programs that only perform one update per step.
 
 We can use the same type of distribution as a prior on the 4 stationary frequencies ($\pi_A, \pi_C, \pi_G, \pi_T$) since these parameters also represent proportions. 
 Specify a flat Dirichlet prior density on the base frequencies:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 sf_prior <- v(1,1,1,1) 
-sf ~ dnDirichlet(sf_prior)
+sf ~ dnDirichlet( sf_prior )
 \end{lstlisting}
 \end{snugshade*}}
 
 The node \cl{sf} represents the $\pi$ node in Figure \ref{gtrgmfig}.
-Now add the simplex scale move on the stationary frequencies to the moves vector:
+Now add the simplex scale move on the stationary frequencies to the moves vector
+
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-moves[2] <- mvSimplexElementScale(sf, alpha=10, tune=true, weight=2)  
+moves[mvi++] = mvSimplex(sf, alpha=10, offset=2, tune=true, weight=15)
+moves[mvi++] = mvSimplexElementScale(esf, alpha=10, tune=true, weight=3) 
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -215,9 +101,6 @@ The \cl{fnGTR()} function takes a set of exchangeability rates and a set of base
 Q := fnGTR(er,sf)
 \end{lstlisting}
 \end{snugshade*}}
-
-
-\textbf{\textit{Gamma-Distributed Site Rates}}
 
 
 We will also assume that the substitution rates vary among sites according to a gamma distribution, which has two parameters: the shape parameter, $\alpha$, and the rate parameter, $\beta$. 
@@ -268,118 +151,97 @@ gamma_rates := fnDiscretizeGamma( shape, shape, 4 )
 \end{lstlisting}
 \end{snugshade*}}
 
-
-
 The random variable that controls the rate variation is the stochastic node \cl{shape}. This variable is a single, real positive value (\cl{RevType = RealPos}). 
 We will apply a simple scale move to this parameter.
 The scale move's tuning parameter is called \cl{lambda} and this value dictates the size of the proposal.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[3] <- mvScale(shape, lambda=1.0, tune=true, weight=2.0)\end{lstlisting}
+moves[mvi++] = mvScale(shape, lambda=1.0, tune=true, weight=2.0)
+\end{lstlisting}
 \end{snugshade*}}
 
-
-\textbf{\textit{Tree Topology and Branch Lengths}}
 
 The tree topology and branch lengths are also stochastic nodes in our model. 
 In Figure \ref{gtrgmfig}, the tree topology is denoted $\Psi$ and the length of the branch leading to node $i$ is $\nu_i$.
 
-We will assume that all possible labeled, unrooted tree topologies have equal probability. This is the \cl{dnUniformTopology()} distribution in RevBayes. Specify the \cl{topology} stochastic node by passing in the number of species \cl{n\_species} and tip labels \cl{names} to the \cl{dnUniformTopology()} distribution:
+We will assume the topology and divergence times are distributed by a birth-death process called \cl{dnBDP()} in RevBayes.
+First, we will define the distribution's speciation rate, {\tt lambda}, and an extinction rate {\tt mu}
+
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-topology ~ dnUniformTopology(n_species, names)
+speciation ~ dnExponential(10.0)
+extinction ~ dnExponential(10.0)
+moves[mvi++] = mvScale(speciation, weight=5)
+moves[mvi++] = mvScale(extinction, weight=5)
 \end{lstlisting}
 \end{snugshade*}}
 
-For some types of stochastic nodes there are several available moves. 
-Often the different moves explore parameter space in a different way and nothing prevents one from using multiple different moves to improve mixing. 
-For the unrooted tree topology, we can use both a nearest-neighbor interchange move (\cl{mvNNI}) and a subtree-prune and regrafting move (\cl{mvSPR}). These moves do not have tuning parameters associated with them, thus you only need to pass in the \cl{topology} node and \cl{weight} 
+Since we know our analysis contains only 23 of 270 known primate species, we may inform the birth-death process only a portion of taxa were sampled.
+Failing to do so artificially inflates the extinction rate.
+
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[4] <- mvNNI(topology, weight=10.0)
-moves[5] <- mvSPR(topology, weight=5.0)
+sampling_fraction <- 23. / 270 # 23 out of the ~ 270 primate species
 \end{lstlisting}
 \end{snugshade*}}
 
+To simplify the analysis, we assume the tree height is known to be 75, although in practice this quantity should be treated as a free parameter to estimate.
 
-Next we have to create a stochastic node for each of the $2N-3$ branches in our tree (where $N=$ \cl{n\_species}). 
-We can do this using a \cl{for} loop --- this is a plate in our graphical model. In this loop, we can create each branch-length node and assign each move. Copy this entire block of Rev code into the console:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+psi ~ dnBDP(lambda=speciation, mu=extinction, rho=sampling_fraction, rootAge=75, names=names)
+\end{lstlisting}
+\end{snugshade*}}
+
+Finally, we will provide moves so the MCMC may explore the space of tree topologies ({\tt mvNNI} and {\tt mvFNPR}, the nearest-neighbor interchange and fixed-node-height-prune-regraft proposals, resp.) and the space of divergence times ({\tt mvNodeTimeSlideUniform}).
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+moves[mvi++] = mvNNI(psi, weight=10.0)
+moves[mvi++] = mvFNPR(psi, weight=5.0)
+moves[mvi++] = mvNodeTimeSlideUniform(psi, weight=10.0)
+\end{lstlisting}
+\end{snugshade*}}
+
+Also for simplicity, we assume a global molecular clock
+
 {\tt \small \begin{snugshade*}
 \begin{lstlisting}
-mi <- 5
-for (i in 1:n_branches) {
-   br_lens[i] ~ dnExponential(10.0)
-   moves[mi++] <- mvScale(br_lens[i],lambda=1,tune=true,weight=1) 
-}
+clock ~ dnExponential(10.0)
+moves[mvi++] = mvScale(clock, lambda=1, tune=true, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-It is convenient to monitor a deterministic variable of the branch lengths. In MrBayes, \textit{tree length} was reported to the log file instead of the length of each branch. The tree length is the sum of all branch lengths and this can be computed using the \cl{sum()} function which calculates the sum of any vector of values.
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-tree_length := sum(br_lens)
-\end{lstlisting}
-\end{snugshade*}}
-
-Finally, we can create a branch-length phylogeny by combining the tree topology and branch lengths using the \cl{treeAssembly()} function, which applies the value of the $i^{th}$ member of the \cl{br\_lens} vector to the branch leading to the $i^{th}$ node in \cl{topology}. Thus, the \cl{phylogeny} variable is a deterministic node: 
+We now have all the parameters needed to model the phylogenetic molecular substitution process
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-phylogeny := treeAssembly(topology, br_lens)
+phyloSeq ~ dnPhyloCTMC(tree=psi, Q=Q, branchRates=clock, siteRates=norm_gamma_rates, pInv=pinvar, type="DNA")
 \end{lstlisting}
 \end{snugshade*}}
 
+To compute the likelihood, we condition the process on the data observed at the tips of the tree
 
-
-\textbf{\textit{Putting it All Together}}
-
-Now that we have initialized virtually all of our model parameters and we can link all of the parts in the stochastic node that will be clamped by the data. 
-The sequence substitution model is a distribution called the \textit{phylogenetic continuous-time Markov chain} and we use the \cl{dnPhyloCTMC} constructor function to create this node.
-This distribution requires several input arguments: (1) the \cl{tree} with branch lengths, (2) the instantaneous rate matrix \cl{Q}, the node characterizing the rate variation across sites (though \cl{siteRates} can be omitted if you do not assume rate variation across sites), (3) \cl{nSites} is the number of sites in the alignment, and (4) the \cl{type} of character data.
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-phyloSeq ~ dnPhyloCTMC(tree=phylogeny, Q=Q, siteRates=gamma_rates, nSites=data.nchar(1), type="DNA")
-\end{lstlisting}
-\end{snugshade*}}
-
-
-Once the character evolution model has been created, we can attach our sequence data to the tip nodes in the tree.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 phyloSeq.clamp(data)
 \end{lstlisting}
 \end{snugshade*}}
-When this function is called, \RevBayes~sets each of the stochastic nodes representing the tip nodes of the tree to the sequence corresponding to that species in the alignment. 
-This essentially tells the program that this is where the DAG ends and the states of the tip nodes are fixed. 
 
-Now we can wrap up the whole model to conveniently access the DAG. To do this, we only need to give the \cl{model()} function a single node. With this node, the \cl{model()} function can find all of the other nodes by following the arrows in the graphical model:
+Since the model is now specified, we wrap the components in a {\tt Model} object.
+
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 mymodel = model(Q)
 \end{lstlisting}
 \end{snugshade*}}
 
-Now we have specified a simple, single-partition analysis---each parameter of the model will be estimated from every site in our alignment.
-If we inspect the contents of \cl{mymodel} we can review all of the nodes in the DAG:
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-mymodel
-\end{lstlisting}
-\end{snugshade*}}
-
-\bigskip
-{\large \textcolor{mycol}{\textsc{Perform MCMC Analysis Under the Uniform Model}}}
-
-This section will cover setting up the MCMC sampler and summarizing the posterior distribution of trees. 
-
-\textbf{\textit{Specify Monitors}}
-
 For our MCMC analysis we need to set up a vector of \textit{monitors} to save the states of our Markov chain. 
 The monitor functions are all called \cl{mn*}, where \cl{*} is the wildcard representing the monitor type.
 First, we will initialize the model monitor using the \cl{mnModel} function. This creates a new monitor variable that will output the states for all model parameters when passed into a MCMC function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[1] = mnModel(filename="output/conifer_uniform.log", printgen=100)
+monitors[mni++] = mnModel(filename="output/PS0.params.txt",printgen=10)
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -387,19 +249,16 @@ The \cl{mnFile} monitor will record the states for only the parameters passed in
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[2] = mnFile(filename="output/conifer_uniform.trees",printgen=100, phylogeny)
+monitors[mni++] = mnFile(psi, filename="output/PS0.tre", printgen=100)
 \end{lstlisting}
 \end{snugshade*}}
-
 
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[3] = mnScreen(printgen=10, separator = " | ", tree_length)
+monitors[mni++] = mnScreen(er, pi, alpha, norm_gamma_rates, pinvar, speciation, extinction, clock, printgen=100)
 \end{lstlisting}
 \end{snugshade*}}
-
-\textbf{\textit{Initialize and Run MCMC}}
 
 With a fully specified model, a set of monitors, and a set of moves, we can now set up the MCMC algorithm that will sample parameter values in proportion to their posterior probability. The \cl{mcmc()} function will create our MCMC object:
 {\tt \begin{snugshade*}
@@ -408,11 +267,10 @@ mymcmc = mcmc(mymodel, monitors, moves)
 \end{lstlisting}
 \end{snugshade*}}
 
-
 We can run the \cl{.burnin()} member function if we wish to pre-run the chain and discard the initial states. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mymcmc.burnin(generations=10000,tuningInterval=1000)
+mymcmc.burnin(generations=10000,tuningInterval=100)
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -426,15 +284,12 @@ mymcmc.run(generations=30000)
 
 When the analysis is complete, you will have the monitor files in your output directory.
 
-
-\textbf{\textit{Summarize the MCMC Output}}
-
 Methods for visualizing the marginal densities of parameter values are not currently available in \RevBayes. Thus, it is important to use programs like Tracer \citep{rambaut09} to evaluate mixing and non-convergence. (RevBayes does, however, have a tool for convergence assessment called \cl{beca}.)
 
 \RevBayes~can also summarize the tree samples by reading in the tree-trace file:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-treetrace = readTreeTrace("output/conifer_uniform.trees")
+treetrace = readTreeTrace("output/model_PS0.tre")
 treetrace.summarize()
 \end{lstlisting}
 \end{snugshade*}}
@@ -443,6 +298,9 @@ treetrace.summarize()
 The \cl{mapTree()} function will summarize the tree samples and write the maximum a posteriori tree to file:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mapTree(treetrace,"output/conifer_uniform_map.tre")
+mapTree(treetrace,"output/model_PS0_map.tre")
 \end{lstlisting}
 \end{snugshade*}}
+
+This completes the uniform partition analysis.
+The next two sections will implement more complex partitioning schemes in a similar manner.
