minor edits on ctmc tutorial

--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -482,10 +482,10 @@ For example, we might allow stationary frequencies, $\pi$, to be unequal, and al
 This corresponds to the substitution model proposed by \citet[][HKY]{Hasegawa1985}, which is specified with the following instantaneous-rate matrix: 
 \begin{equation*}
 Q_{HKY} = \begin{pmatrix} 
-{\cdot} 			& {\kappa\pi_C} 	& {\pi_G} 			& {\pi_T} \\ 
-{\kappa\pi_A} 		& {\cdot} 			& {\pi_C} 			& {\pi_T} \\ 
-{\pi_A} 			& {\pi_C} 			& {\cdot} 			& {\kappa\pi_T} \\ 
-{\pi_A} 			& {\pi_C} 			& {\kappa\pi_G} 	& {\cdot}  
+{\cdot} 			& {\pi_C} 	& {\kappa\pi_G} 			& {\pi_T} \\ 
+{\pi_A} 		& {\cdot} 			& {\pi_C} 			& {\kappa\pi_T} \\ 
+{\kappa\pi_A} 			& {\pi_C} 			& {\cdot} 			& {\pi_T} \\ 
+{\pi_A} 			& {\kappa\pi_C} 			& {\pi_G} 	& {\cdot}  
 \end{pmatrix} \mbox{  .}
 \end{equation*}
 [The diagonal ${\cdot}$ entries are equal to the negative sum of the elements in the corresponding row.] 
