--- a/tutorial_TeX/RB_CTMC_Tutorial/figures/jc_graphical_model_unconstrained.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/figures/jc_graphical_model_unconstrained.tex
@@ -65,31 +65,15 @@
 \draw [taro] (qn) -- (in) ;
 \draw [taro] (qn) edge[bend right] (tn) ;
 \draw [taro] (qn) edge[bend left] (rn) ;
-\node [detnode] (lin) at ($(in)+(-2,4.5)$) {$a_i$};
-\node [detnode] (ltn) at ($(tn)+(-2,4.5)$) {$a_i$};
-\path ($(ltn)+(0.25,1)$) edge[->, line width=2pt, dashed,color=black] (ltn) ;
-\path ($(lin)+(0.25,1)$) edge[->, line width=2pt, dashed,color=black] (lin) ;
+\node [snode] (lin) at ($(in)+(-2,4.5)$) {$\nu_i$};
+\node [snode] (ltn) at ($(tn)+(-2,4.5)$) {$\nu_i$};
 \draw [taro] (lin) edge[bend right](in) ;
 \draw [taro] (ltn) edge[bend right](tn) ;
 \coordinate (Middle) at ($(lin)!0.5!(ltn)$);
-\node[constnode,inner sep=2mm] (a) at ($(tp)+(-17,1.5)$) {$a$};
-\node[constnode,inner sep=2mm] (b) at ($(tp)+(-17,0.5)$) {$b$};
-\node[constnode,inner sep=2mm] (c) at ($(tp)+(-17,-0.5)$) {$c$};
-\node[constnode,inner sep=2mm] (d) at ($(tp)+(-17,-1.5)$) {$d$};
-\node[snode,inner sep=2mm] (turnover) at ($(tp)+(-15,-1)$) {$turn$};
-\node[snode,inner sep=2mm] (diversification) at ($(tp)+(-15,1)$) {$div$};
-\node[detnode,inner sep=2mm] (lambda) at ($(tp)+(-13,1)$) {$\lambda$};
-\node[detnode,inner sep=2mm] (mu) at ($(tp)+(-13,-1)$) {$\mu$};
+\node [constnode] (lamb) at ($(Middle)+(0,2.25)$) {$\lambda$};
+\draw [taro] (lamb) edge[bend left](ltn) ;
+\draw [taro] (lamb) edge[bend right](lin) ;
 \node[snode,inner sep=2mm] (topo) at ($(tp)+(-11,0)$) {\Large $\Psi$};
-\draw [taro] (a) -- (diversification) ;
-\draw [taro] (b) -- (diversification) ;
-\draw [taro] (c) -- (turnover) ;
-\draw [taro] (d) -- (turnover) ;
-\draw [dtaro] (diversification) -- (lambda) ;
-\draw [dtaro] (turnover) -- (lambda) ;
-\draw [dtaro] (turnover) -- (mu) ;
-\draw [taro] (lambda) -- (topo) ;
-\draw [taro] (mu) -- (topo) ;
 \draw[-,line width=2pt] (topo) -- (tp) ;
 \end{tikzpicture}\]
 \end{document}
