minor edits to the ctmc tutorial

--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.tex
@@ -13,7 +13,7 @@
 \textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Substitution Models}}\\\vspace{2mm}
 \vspace{1cm}
-{\Large Sebastian H{\"o}hna and }
+{\Large Sebastian H{\"o}hna, Michael Landis, Tracy Heath and Brian Moore}
 \vspace{1cm}
 \end{center}
 
