Minor fixes to the CTMC tutorial.

--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -373,7 +373,7 @@ monitors[2] = mnFile(filename="output/primates_cytb_JC_posterior.trees",printgen
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[3] = mnScreen(printgen=1000, TL)
+monitors[3] = mnScreen(printgen=1000, diversification, turnover)
 \end{lstlisting}
 \end{snugshade*}}
 
